--- a/.github/workflows/docsearch.yml
+++ b/.github/workflows/docsearch.yml
@@ -19,11 +19,9 @@ jobs:
         env:
           APPLICATION_ID: ${{ secrets.APPLICATION_ID }}
           API_KEY: ${{ secrets.API_KEY }}
-          CONFIG: ${{ steps.algolia_config.outputs.config }}
         run: |
           docker run \
             --env APPLICATION_ID=${APPLICATION_ID} \
             --env API_KEY=${API_KEY} \
-            --env "CONFIG=${CONFIG}" \
+            --env "CONFIG=$(cat docsearch.json | jq -r tostring)" \
             algolia/docsearch-scraper
-
