--- a/crawlerConfig.json
+++ b/crawlerConfig.json
@@ -1,5 +1,5 @@
 {
-  "index_name": "heels-of-giants docs search engine",
+  "index_name": "nanshuo-website",
   "start_urls": [
     "https://www.nanshuo.icu/"
   ],
