--- a/.github/workflows/docsearch.yml
+++ b/.github/workflows/docsearch.yml
@@ -16,7 +16,7 @@ jobs:
       # 一会要建docsearch.json文件
       - name: Get the content of docsearch.json as config
         id: algolia_config
-        run: echo "::set-output name=config::$(cat docsearch.json | jq -r tostring)"
+        run: echo "config=$(cat docsearch.json | jq -r tostring)" >> $GITHUB_OUTPUT
 
       - name: Run algolia/docsearch-scraper image
         # 环境变量 ，在仓库设置-安全里添加秘钥
