--- a/.github/workflows/docsearch.yml
+++ b/.github/workflows/docsearch.yml
@@ -1,36 +1,19 @@
-# 名字可以自己取
-name: docsearch
-
-# 提交master分支触发部署
+name: Algolia
 on:
   push:
     branches:
       - master
-
 jobs:
   algolia:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-
-      # 一会要建docsearch.json文件
-      - name: Get the content of docsearch.json as config
+      - uses: actions/checkout@v3
+      - name: Get the content of algolia.json as config
         id: algolia_config
         run: echo "config=$(cat docsearch.json | jq -r tostring)" >> $GITHUB_OUTPUT
-
-      - name: Run algolia/docsearch-scraper image
-        # 环境变量 ，在仓库设置-安全里添加秘钥
-        # APPLICATION_ID 是 algoia 的 APPLICATION ID
-        # API_KEY 是 algolia 的 Admin API KEY
-        # CONFIG默认即可，无需更改
+      - name: Push indices to Algolia
+        uses: signcl/docsearch-scraper-action@master
         env:
           APPLICATION_ID: ${{ secrets.APPLICATION_ID }}
           API_KEY: ${{ secrets.API_KEY }}
           CONFIG: ${{ steps.algolia_config.outputs.config }}
-        run: |
-          docker run \
-            --env APPLICATION_ID=${APPLICATION_ID} \
-            --env API_KEY=${API_KEY} \
-            --env "CONFIG=${CONFIG}" \
-            algolia/docsearch-scraper
-
